--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="index-3e91aa3d.js"></script>
+    <script type="module" crossorigin src="index-e6a06be5.js"></script>
   </head>
-  <body>
-    <div id="app"></div>
+  <body style="position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);">
+    <div id="app" ></div>
     
   </body>
 </html>
