--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite App</title>
-    <script type="module" crossorigin src="index-e6a06be5.js"></script>
+    <style>
+                  canvas{
+                display:block;
+                margin: 0;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+            }
+    </style>
+    <script type="module" crossorigin src="index-ef148112.js"></script>
   </head>
-  <body style="position: absolute;top: 50%;left: 50%;transform: translate(-50%,-50%);">
+  <body >
     <div id="app" ></div>
     
   </body>
